--- a/EDA/EDA.ipynb
+++ b/EDA/EDA.ipynb
@@ -39,9 +39,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 3329 entries, 0 to 3456\n",
+      "Data columns (total 75 columns):\n",
+      " #   Column                                        Non-Null Count  Dtype  \n",
+      "---  ------                                        --------------  -----  \n",
+      " 0   id                                            3329 non-null   float64\n",
+      " 1   listing_url                                   3329 non-null   object \n",
+      " 2   scrape_id                                     3329 non-null   int64  \n",
+      " 3   last_scraped                                  3329 non-null   object \n",
+      " 4   source                                        3329 non-null   object \n",
+      " 5   name                                          3329 non-null   object \n",
+      " 6   description                                   0 non-null      float64\n",
+      " 7   neighborhood_overview                         2164 non-null   object \n",
+      " 8   picture_url                                   3329 non-null   object \n",
+      " 9   host_id                                       3329 non-null   int64  \n",
+      " 10  host_url                                      3329 non-null   object \n",
+      " 11  host_name                                     3329 non-null   object \n",
+      " 12  host_since                                    3329 non-null   object \n",
+      " 13  host_location                                 2051 non-null   object \n",
+      " 14  host_about                                    2177 non-null   object \n",
+      " 15  host_response_time                            2560 non-null   object \n",
+      " 16  host_response_rate                            2560 non-null   object \n",
+      " 17  host_acceptance_rate                          2450 non-null   object \n",
+      " 18  host_is_superhost                             3326 non-null   object \n",
+      " 19  host_thumbnail_url                            3329 non-null   object \n",
+      " 20  host_picture_url                              3329 non-null   object \n",
+      " 21  host_neighbourhood                            3123 non-null   object \n",
+      " 22  host_listings_count                           3329 non-null   int64  \n",
+      " 23  host_total_listings_count                     3329 non-null   int64  \n",
+      " 24  host_verifications                            3329 non-null   object \n",
+      " 25  host_has_profile_pic                          3329 non-null   object \n",
+      " 26  host_identity_verified                        3329 non-null   object \n",
+      " 27  neighbourhood                                 2164 non-null   object \n",
+      " 28  neighbourhood_cleansed                        3329 non-null   object \n",
+      " 29  neighbourhood_group_cleansed                  3329 non-null   object \n",
+      " 30  latitude                                      3329 non-null   float64\n",
+      " 31  longitude                                     3329 non-null   float64\n",
+      " 32  property_type                                 3329 non-null   object \n",
+      " 33  room_type                                     3329 non-null   object \n",
+      " 34  accommodates                                  3329 non-null   int64  \n",
+      " 35  bathrooms                                     0 non-null      float64\n",
+      " 36  bathrooms_text                                3310 non-null   object \n",
+      " 37  bedrooms                                      0 non-null      float64\n",
+      " 38  beds                                          3255 non-null   float64\n",
+      " 39  amenities                                     3329 non-null   object \n",
+      " 40  price                                         3329 non-null   object \n",
+      " 41  minimum_nights                                3329 non-null   int64  \n",
+      " 42  maximum_nights                                3329 non-null   int64  \n",
+      " 43  minimum_minimum_nights                        3329 non-null   int64  \n",
+      " 44  maximum_minimum_nights                        3329 non-null   int64  \n",
+      " 45  minimum_maximum_nights                        3329 non-null   int64  \n",
+      " 46  maximum_maximum_nights                        3329 non-null   int64  \n",
+      " 47  minimum_nights_avg_ntm                        3329 non-null   float64\n",
+      " 48  maximum_nights_avg_ntm                        3329 non-null   float64\n",
+      " 49  calendar_updated                              0 non-null      float64\n",
+      " 50  has_availability                              3329 non-null   object \n",
+      " 51  availability_30                               3329 non-null   int64  \n",
+      " 52  availability_60                               3329 non-null   int64  \n",
+      " 53  availability_90                               3329 non-null   int64  \n",
+      " 54  availability_365                              3329 non-null   int64  \n",
+      " 55  calendar_last_scraped                         3329 non-null   object \n",
+      " 56  number_of_reviews                             3329 non-null   int64  \n",
+      " 57  number_of_reviews_ltm                         3329 non-null   int64  \n",
+      " 58  number_of_reviews_l30d                        3329 non-null   int64  \n",
+      " 59  first_review                                  1781 non-null   object \n",
+      " 60  last_review                                   1781 non-null   object \n",
+      " 61  review_scores_rating                          1781 non-null   float64\n",
+      " 62  review_scores_accuracy                        1779 non-null   float64\n",
+      " 63  review_scores_cleanliness                     1779 non-null   float64\n",
+      " 64  review_scores_checkin                         1779 non-null   float64\n",
+      " 65  review_scores_communication                   1780 non-null   float64\n",
+      " 66  review_scores_location                        1779 non-null   float64\n",
+      " 67  review_scores_value                           1779 non-null   float64\n",
+      " 68  license                                       1362 non-null   object \n",
+      " 69  instant_bookable                              3329 non-null   object \n",
+      " 70  calculated_host_listings_count                3329 non-null   int64  \n",
+      " 71  calculated_host_listings_count_entire_homes   3329 non-null   int64  \n",
+      " 72  calculated_host_listings_count_private_rooms  3329 non-null   int64  \n",
+      " 73  calculated_host_listings_count_shared_rooms   3329 non-null   int64  \n",
+      " 74  reviews_per_month                             1781 non-null   float64\n",
+      "dtypes: float64(18), int64(22), object(35)\n",
+      "memory usage: 1.9+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "df.info()"
    ]
@@ -50,15 +139,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remove the irrelevant columns that is used for the scrapping, and only keep the relevant in the data set"
+    "Remove the irrelevant columns used for scraping and retain only the relevant ones in the dataset. This will help avoid unnecessary processing."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "bnb_listing = df.drop([\"listing_url\",\"scrape_id\",\"last_scraped\",\"last_scraped\",\"source\",\"description\",\"picture_url\",\"host_url\",\"host_thumbnail_url\",\"host_picture_url\",\"longitude\",\"latitude\",\"amenities\",\"calendar_last_scraped\",\"bathrooms\",\"bedrooms\",\"calendar_updated\",'license','host_about'], axis=1)"
    ]
   },
@@ -66,12 +156,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dividing data columns such that they cover the various different aspect of the Airbnb, like one group can be host related and how does this impact the price, other can be related to future occupancy."
+    "Grouping columns into relevant groups to make it easier to process the data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,10 +176,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Trying to understand the importance of each variable, including unique and null values, as well as their relationships with other important variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique listings based on the 'id' column: 3329\n"
+     ]
+    }
+   ],
    "source": [
     "#Checking if all the listings are unique or not\n",
     "unique_property_count = bnb_listing['id'].nunique()\n",
